--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,13 +1,13 @@
 <div id="theSidebar" class="sidebar">
 
-    <a href="{{ site.baseurl }}/#header"><h1><span>EMMA</span>XIE</h1></a>
+    <a href="{{ site.baseurl }}/#header"><h1><span>Raymond</span>Chou</h1></a>
     <nav class="related">
       <div class="menu-item">
         <a href="#"><img src="/images/menu-icon.png"></a>
         <div class="sub-menu">
             <img src="/images/sidebar-logo.png"></a>
 
-            <h2 class="title"> <br>EMMA XIE<br></h2>
+            <h2 class="title"> <br>Raymond Chou<br></h2>
             <hr>
             <a href="{{ site.baseurl }}/portfolio/">PORTFOLIO</a>
             <a href="{{ site.baseurl }}/#about">ABOUT</a>
