--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -38,7 +38,7 @@
             <p><i>Say hi!</i></p>
             <hr>
             
-            <a href="mailto:emma.xie@uwaterloo.ca"><i>emma.xie@uwaterloo.ca</i><br><br><br></p>
+            <a href="mailto:raymond.chou@mail.utoronto.ca"><i>raymond.chou@mail.utoronto.ca</i><br><br><br></p>
             <a href="https://github.com/eexie" target="_blank">GITHUB</a> | <a href="http://devpost.com/exme"target="_blank">DEVPOST</a> | <a href="https://ca.linkedin.com/in/eexie"target="_blank">LINKEDIN</a> | <a href="https://twitter.com/_eexie"target="_blank">TWITTER</a>
 
         </div>
