--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,16 +49,16 @@
             <span class="Icon Icon--logo Icon--large"></span>
 
             <!-- Link in web -->
-            <a class="home-link" href="{{ site.baseurl }}/">Twitter Open Source</a>
+            <a class="home-link" href="{{ site.baseurl }}/">Design Portfolio</a>
 
             <!-- Text in mobile -->
-            <p class="home-text">Twitter Open Source</p>
+            <p class="home-text">Design Portfolio</p>
             <span id="caret" class="Icon Icon--caretDown"></span>
         </div>
         <ul class="nav-menu">
             <!-- This link only exists in mobile -->
             <li id="extra-mobile-link" class="nav-list-item">
-                <a class="nav-link" href="{{ site.baseurl }}/">Twitter Open Source</a>
+                <a class="nav-link" href="{{ site.baseurl }}/">Design Portfolio</a>
             </li>
 
             <li class="nav-list-item">
@@ -70,16 +70,8 @@
                 <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
             </li> -->
 
-            <li class="nav-list-item">
-                <a class="nav-link" href="{{ site.baseurl }}/memberships">#Squad</a>
-            </li>
-
-            <li class="nav-list-item">
-                <a class="nav-link" href="https://blog.twitter.com/engineering/en_us/topics/open-source.html" target="_blank">Blog</a>
-            </li>
-
             <li class="nav-list-item list-end">
-                <a class="nav-link" href="https://github.com/twitter" target="_blank">Github</a>
+                <a class="nav-link" href="https://github.com/raymond3chou" target="_blank">Github</a>
             </li>
         </div>
     </nav>
