--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,16 +49,16 @@
             <span class="Icon Icon--logo Icon--large"></span>
 
             <!-- Link in web -->
-            <a class="home-link" href="{{ site.baseurl }}/">Design Portfolio</a>
+            <a class="home-link" href="{{ site.baseurl }}/">Raymond Chou</a>
 
             <!-- Text in mobile -->
-            <p class="home-text">Design Portfolio</p>
+            <p class="home-text">Raymond Chou</p>
             <span id="caret" class="Icon Icon--caretDown"></span>
         </div>
         <ul class="nav-menu">
             <!-- This link only exists in mobile -->
             <li id="extra-mobile-link" class="nav-list-item">
-                <a class="nav-link" href="{{ site.baseurl }}/">Design Portfolio</a>
+                <a class="nav-link" href="{{ site.baseurl }}/">Raymond Chou</a>
             </li>
 
             <li class="nav-list-item">
