changed nav bar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,8 +46,6 @@
     <!-- Navigation Bar -->
     <nav>
         <div class="nav-title">
-            <span class="Icon Icon--logo Icon--large"></span>
-
             <!-- Link in web -->
             <a class="home-link" href="{{ site.baseurl }}/">Raymond Chou</a>
 
@@ -57,7 +55,7 @@
         </div>
         <ul class="nav-menu">
             <!-- This link only exists in mobile -->
-            <li id="extra-mobile-link" class="nav-list-item">
+            <li class="nav-list-item">
                 <a class="nav-link" href="{{ site.baseurl }}/">Raymond Chou</a>
             </li>
 
@@ -91,44 +89,10 @@
                 <h3 class="xsmall-margin">
                     <a class="foot-link" target="_blank" href="https://about.twitter.com/">About</a>
                 </h3>
-                <a class="foot-link" target="_blank" href="https://about.twitter.com/en_us/lets-go-twitter.html">Let's go Twitter</a>
-                <a class="foot-link" target="_blank" href="https://careers.twitter.com/en.html">Careers</a>
             </div>
-
-            <div class="Grid-cell footer-cell u-size1of4 footer-margin">
-                <h3 class="xsmall-margin">
-                    <a class="foot-link" target="_blank" href="https://blog.twitter.com/">Blogs</a>
-                </h3>
-                <a class="foot-link" target="_blank" href="https://blog.twitter.com/engineering/en_us/topics/open-source.html">Open Source</a>
-                <a class="foot-link" target="_blank" href="https://blog.twitter.com/engineering/en_us.html">Engineering</a>
-                <a class="foot-link" target="_blank" href="https://blog.twitter.com/developer">Developer</a>
-            </div>
-
-            <div class="Grid-cell footer-cell u-size1of4 footer-margin">
-                <h3 class="xsmall-margin">
-                    <a class="foot-link" target="_blank" href="https://developer.twitter.com/">Developers</a>
-                </h3>
-                <a class="foot-link" target="_blank" href="https://dev.twitter.com/overview/documentation">Documentation</a>
-                <a class="foot-link" target="_blank" href="https://twittercommunity.com/">Forums</a>
-                <a class="foot-link" target="_blank" href="https://dev.twitter.com/community">Communities</a>
-            </div>
-
             <div class="Grid-cell footer-cell u-size1of4">
-                <a class="foot-link" href="">© 2018 Twitter, Inc.</a>
+                <a class="foot-link" href="">© 2019, Raymond Chou.</a>
             </div>
-
-            <div class="Grid-cell footer-cell u-size1of4">
-                <a class="foot-link" target="_blank" href="https://support.twitter.com/articles/20170520">Cookies</a>
-            </div>
-
-            <div class="Grid-cell footer-cell u-size1of4">
-                <a class="foot-link" target="_blank" href="https://twitter.com/privacy">Privacy</a>
-            </div>
-
-            <div class="Grid-cell footer-cell u-size1of4">
-                <a class="foot-link" target="_blank" href="https://twitter.com/tos">Terms and Conditions</a>
-            </div>
-
         </div>
     </div> <!-- End of Footer -->
   </body>
